# eightysix

./: .gitignore  Cargo.toml  Dockerfile  README.md  mix.exs
.github/workflows/: docker.yml  rust.yml
config/: config.exs
lib/: eightysix.ex
lib/eightysix/: application.ex  bot.ex
lib/eightysix/coffee/: coffee.ex
lib/eightysix/cron/: scheduler.ex
lib/eightysix/middleware/: groupfilter.ex
lib/eightysix/projector/: pjlink.ex  projector.ex
lib/eightysix/shopping_list/: shopping_list.ex  storage.ex
src/: bin_day.rs  main.rs  projector.rs  settings.rs
test/: eightysix_test.exs
