[package]
name = "eightysix"
version = "0.1.0"
authors = ["bo0tzz <btdewilligen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
pjlink = "0.2.0"
lazy_static = "1.4.0"
cached = "0.18.0"
serde = "1.0.115"
serde_derive = "1.0.115"