[package]
name = "eightysix"
version = "0.1.0"
authors = ["bo0tzz <btdewilligen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
pjlink = "0.2.0"
lazy_static = "1.4.0"
cached = "0.18.0"
serde = "1.0.115"
serde_derive = "1.0.115"
chrono = "0.4.15"
timer = "0.2.0"
num-traits = "0.2.12"
regex = "1.3.9"

telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }